trunk/Archive2/88/f1d9ad2d22a2ba/output
main.cpp: In function 'int main()':
main.cpp:49:14: error: no matching function for call to 'func_3(Boo*)'
     func_3(&c);
              ^
main.cpp:49:14: note: candidate is:
main.cpp:24:6: note: template<template<class> class T1, class T2> void func_3(T1<T2>*)
 void func_3(T1<T2>* t)
      ^
main.cpp:24:6: note:   template argument deduction/substitution failed:
main.cpp:49:14: note:   can't deduce a template for 'T1<T2>' from non-template type 'Boo'
     func_3(&c);
              ^
